# ModuleNotFound_Innov8_2.0

./: INNOV8_PyPDF+Part3+Exaggerated_Claims.ipynb  README.md  interface.py  pipeline.ipynb  pyproject.toml
data/: .goutputstream-FOPXU2  Final_Credit_Score.csv  LOR_skills.csv  all_resumes_data.json  config.json  df_resume_sorted.csv  dir_subdir.csv  final_credit_scores.csv  final_processed_resumes.csv  final_ranked_resumes.csv  job_skills.json  skills_summary.json
data/extracted_text_files/: Resume_of_ID_0.txt  Resume_of_ID_1.txt  Resume_of_ID_10.txt  Resume_of_ID_100.txt  Resume_of_ID_101.txt  Resume_of_ID_102.txt  Resume_of_ID_103.txt  Resume_of_ID_104.txt  Resume_of_ID_105.txt  Resume_of_ID_106.txt  Resume_of_ID_107.txt  Resume_of_ID_108.txt  Resume_of_ID_109.txt  Resume_of_ID_11.txt  Resume_of_ID_110.txt  Resume_of_ID_111.txt  Resume_of_ID_112.txt  Resume_of_ID_113.txt  Resume_of_ID_114.txt  Resume_of_ID_115.txt  Resume_of_ID_116.txt  Resume_of_ID_117.txt  Resume_of_ID_118.txt  Resume_of_ID_119.txt  Resume_of_ID_12.txt  Resume_of_ID_120.txt  Resume_of_ID_121.txt  Resume_of_ID_122.txt  Resume_of_ID_123.txt  Resume_of_ID_124.txt  Resume_of_ID_125.txt  Resume_of_ID_126.txt  Resume_of_ID_127.txt  Resume_of_ID_128.txt  Resume_of_ID_129.txt  Resume_of_ID_13.txt  Resume_of_ID_130.txt  Resume_of_ID_131.txt  Resume_of_ID_132.txt  Resume_of_ID_133.txt  (+958 more)
utils/: parser.py
zip/: README.md
