[tool.poetry]
name = "modulenotfound-innov8-2-0"
version = "0.1.0"
description = ""
authors = ["rwik04 <rwik04@kgpian.iitkgp.ac.in>"]
readme = "README.md"
packages = [{include = "modulenotfound_innov8_2"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
spacy = "^3.5.0"
language-tool-python = "^2.7.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
textblob = "^0.17.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
networkx = "^3.0"
chardet = "^5.2.0"
PyPDF2 = "^3.0.0"
torch = "^2.1.0"
transformers = "^4.35.0"
groq = "^0.5.0"
google-generativeai = "^0.3.0"
streamlit = "^1.41.1"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
